--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java'
+    id("com.github.johnrengelman.shadow") version "4.0.1"
 }
 
 group 'org.example'
 
 repositories {
     mavenCentral()
+
 }
 
 jar {
@@ -20,16 +22,6 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File Example',
-                'Main-Class': 'RunApp'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
 }
 
 test {
